poweredge-t640@2021-06-08_00-39-56: As our code is modified in multiple machines, the last three commits try to combine them together

--- a/projects/WSL/configs/COCO-PanopticSegmentation/jtsm_WSR_18_DC5_1x.yaml
+++ b/projects/WSL/configs/COCO-PanopticSegmentation/jtsm_WSR_18_DC5_1x.yaml
@@ -4,7 +4,6 @@ WSL:
   REFINE_REG: [True, True, True, True]
   PS_ON: True
   SP_ON: True
-  MASK_MINED_TOP_K: 10
 MODEL:
   META_ARCHITECTURE: "GeneralizedMCNNWSL"
   MASK_ON: True
@@ -17,8 +16,10 @@ MODEL:
     POOLER_TYPE: "MOIPool"
   ROI_MASK_HEAD:
     NAME: "MaskRCNNConvUpsampleWSLHead"
+    #NAME: "MaskRCNNConvUpsampleHead"
   BACKBONE:
-    NAME: "build_wsl_resnet_backbone"
+    #NAME: "build_wsl_resnet_backbone"
+    NAME: "build_wsl_resnet_v2_backbone"
     FREEZE_AT: 5
 SOLVER:
   STEPS: (140000, 200000)
