--- a/projects/WSL/configs/PascalVOC-PanopticSegmentation/jtsm_WSR_18_DC5_1x_VOC2007.yaml
+++ b/projects/WSL/configs/PascalVOC-PanopticSegmentation/jtsm_WSR_18_DC5_1x_VOC2007.yaml
@@ -10,13 +10,14 @@ MODEL:
   SEM_SEG_HEAD:
     NAME: "TwoClassHead"
     IN_FEATURES: ["res5",]
-    NUM_CLASSES: 2
+    NUM_CLASSES: 1
   ROI_HEADS:
     NAME: "JTSMROIHeads"
   ROI_BOX_HEAD:
     POOLER_TYPE: "MOIPool"
   ROI_MASK_HEAD:
     NAME: "MaskRCNNConvUpsampleWSLHead"
+    #NAME: "MaskRCNNConvUpsampleHead"
   BACKBONE:
     NAME: "build_wsl_resnet_backbone"
     FREEZE_AT: 5
