--- a/projects/WSL/configs/PascalVOC-PanopticSegmentation/jtsm_WSR_18_DC5_1x.yaml
+++ b/projects/WSL/configs/PascalVOC-PanopticSegmentation/jtsm_WSR_18_DC5_1x.yaml
@@ -17,8 +17,10 @@ MODEL:
     POOLER_TYPE: "MOIPool"
   ROI_MASK_HEAD:
     NAME: "MaskRCNNConvUpsampleWSLHead"
+    #NAME: "MaskRCNNConvUpsampleHead"
   BACKBONE:
-    NAME: "build_wsl_resnet_backbone"
+    #NAME: "build_wsl_resnet_backbone"
+    NAME: "build_wsl_resnet_v2_backbone"
     FREEZE_AT: 5
 SOLVER:
   STEPS: (35000, 50000)
