--- a/projects/WSL/configs/Base-RCNN-DilatedC5.yaml
+++ b/projects/WSL/configs/Base-RCNN-DilatedC5.yaml
@@ -27,7 +27,7 @@ SOLVER:
   BASE_LR: 0.02
   STEPS: (60000, 80000)
   MAX_ITER: 90000
-  REFERENCE_WORLD_SIZE: 4
+  #REFERENCE_WORLD_SIZE: 4
 INPUT:
   MIN_SIZE_TRAIN: (640, 672, 704, 736, 768, 800)
 VERSION: 2
