--- a/projects/WSL/configs/PascalVOC-Detection/oicr_WSR_50_DC5_1x.yaml
+++ b/projects/WSL/configs/PascalVOC-Detection/oicr_WSR_50_DC5_1x.yaml
@@ -6,7 +6,8 @@ MODEL:
   MASK_ON: False
   LOAD_PROPOSALS: True
   BACKBONE:
-    NAME: "build_wsl_resnet_backbone"
+    #NAME: "build_wsl_resnet_backbone"
+    NAME: "build_wsl_resnet_v2_backbone"
     FREEZE_AT: 5
   RESNETS:
     DEPTH: 50
@@ -26,6 +27,7 @@ MODEL:
     NUM_CONV: 0
     NUM_FC: 2
     DAN_DIM: [2048, 4096]
+    BBOX_REG_LOSS_TYPE: "smooth_l1_weighted"
 INPUT:
   MIN_SIZE_TRAIN: (480, 512, 544, 576, 608, 640, 672, 704, 736, 768, 800, 832, 864, 896, 928, 960, 992, 1024, 1056, 1088, 1120, 1152, 1184, 1216)
   MAX_SIZE_TRAIN: 2000
